canviar metodos de optener datos da la api de pinia a composable, esto estava fallando ya que pinia guarda la mima informacion para todos dando igual donde estes, con esto me permite llamar mas veces a este metodo y asi poder realizar mas de una llamada a la api
