# api_laravel/storage/api-docs/api-docs.json
@@ -16,7 +16,7 @@
                 "tags": [
                     "Houses"
                 ],
-                "summary": "Listado de todos los datos de las casas de Hogwarts.",
+                "summary": "Listado de todos los datos de las casas de Hogwarts de forma paginnada.",
                 "operationId": "4827c848baed49d576f5f965bc39c95e",
                 "responses": {
                     "200": {
@@ -126,6 +126,59 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/api/allHouses": {
+            "get": {
+                "tags": [
+                    "Houses"
+                ],
+                "summary": "Obtener todas las casas de Hogwarts",
+                "description": "Devuelve un listado de todas las casas de Hogwarts con sus detalles.",
+                "operationId": "429ef1433c7589e8f198be0ca9514736",
+                "responses": {
+                    "200": {
+                        "description": "Un listado de todas las casas de Hogwarts.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "string",
+                                            "example": "0763e821-09ea-4fc8-bac1-d8fc70c3e4b4"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Hufflepuff"
+                                        },
+                                        "puntos": {
+                                            "type": "integer",
+                                            "example": 24
+                                        },
+                                        "image": {
+                                            "type": "string",
+                                            "example": "https://i.pinimg.com/736x/39/80/92/398092891a39c67b1241734c5fea6843.jpg"
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-05-22T07:06:45.000000Z"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-05-22T07:06:45.000000Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     }
                 }
             }
